# genjwtkey

./: .gitignore  LICENSE  MANIFEST.in  README.md  entry_points.cfg  requirements.txt  setup.cfg  setup.py
genjwtkey/: __init__.py  generate.py
