[metadata]
name = genjwtkey
version = 1.0
author = Wataru Nishimura
author_email = wataru.nishimura@irenkakotan.co.jp
description = "This package is a generator of assertion key pair for LINE Bot."
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
install_requires =
  jwcrypto
  pathlib
python_requires = >=3.4
entry_points = file: entry_points.cfg