[metadata]
name = genjwtkey
version = 1.0
author = Wataru Nishimura
author_email = wataru.nishimura@irenkakotan.co.jp
description = "This package is a generator of assertion key pair for LINE Bot."
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
install_requires =
  jwcrypto>=1.0
  pathlib>=1.0.1
python_requires = >=3.4

[options.entry_points]
console_scripts = 
  genjwtkey = genjwtkey.generate:generate